# django-docker-tutorial

./: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  environment.yml  pyproject.toml
mysite/: settings.py
polls/migrations/: 0001_initial.py
